# AI-MARKET-DATA-SERVICE

./: .env.example  .gitignore  README.md  aaii_charts.js  pyproject.toml
app/: main.py
config/: source_policy.json
docs/: architecture.md  forensics-gap-aware-parallel-research-20260723.md  market_context_mnq_example.json  market_context_mnq_live.json  market_context_mnq_verified.json  market_data_health_report.json  persistent-ai-and-temporal-architecture.md
scripts/: backup_database.py  cleanup_storage.py  generate_health_report.py  market_research_smoke_helpers.ps1  migrate_legacy_database.py  migrate_persistence.py  reset_database.py  run_ai_research_direct_diagnostic.py  run_e2e_cache_test.ps1  run_health_report.ps1  smoke_test_market_research.ps1  validate_database.py  validate_market_context_payload.py  validate_true_cold_start.py
tests/: conftest.py  test_agentic_budget_contract.py  test_agentic_smoke_runtime_hardening.py  test_ai_research_validation.py  test_ai_researcher_codex_cli.py  test_ai_trader_consumer_v2.py  test_ai_trader_readiness_contract.py  test_api.py  test_atomic_research_persistence.py  test_bea_provider.py  test_bls_provider.py  test_cache_fallback.py  test_cme_market_schedule_provider.py  test_config.py  test_consumer_contract_correctness.py  test_corrective_persistent_ai_invariants.py  test_data_integrity_contract.py  test_diagnostics_e2e_cache.py  test_economic_event_materialization.py  test_event_enrichment.py  test_event_providers.py  test_event_window_service.py  test_fed_expectations_service.py  test_fmp_xtb_providers.py  (+28 more)
(+152 files in other folders)
